--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>LeadRight needs your location to show you political events happening near you</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>LeadRight needs your location to show you political events happening near you</string>
 </dict>
 </plist>
