--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,14 @@ dependencies:
   path_provider: ^2.1.1
   cupertino_icons: ^1.0.8
 
+  # Calendar
+  add_2_calendar: ^2.1.0
+
+  # PDF Generation
+  pdf: ^3.10.7
+  printing: ^5.12.0
+  share_plus: ^10.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
