--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,15 +36,15 @@ jobs:
       - name: Run Cursor on changed files only
         env:
           CURSOR_API_KEY: ${{ secrets.CURSOR_API_KEY }}
+          PATH: $HOME/.local/bin:$PATH
         run: |
           f="${{ steps.diff.outputs.files }}"
           if [ -z "$f" ]; then
-            echo "No changed files to review."
-            exit 0
+          echo "No changed files to review."
+          exit 0
           fi
           printf "%s\n" $f > changed_files.txt
-          # call cursor via full path to be safe
-          $HOME/.cursor/bin/cursor review $(cat changed_files.txt | tr '\n' ' ') > review_output.txt || true
+          cursor-agent review $(cat changed_files.txt | tr '\n' ' ') > review_output.txt || true
 
       - name: Create issue with review
         if: steps.diff.outputs.files != ''
